# EnergyConsumptionApp_

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/assets/: model.ncnn.param
composeApp/src/androidMain/jni/cpp/: CMakeLists.txt  yolo.cpp  yolov8_pose.cpp  yolov8ncnn.cpp  yolov8pose.h
composeApp/src/androidMain/kotlin/com/jetbrains/kmpapp/: BatteryUtils.kt  CameraView.android.kt  Fonts.kt  GraphicOverlay.kt  MainActivity.kt  PoseDetectionViewModelImpl.kt  PoseGraphic.kt  PoseResult.kt  PowerConnectionReceiver.kt  YoloV8Ncnn.kt  YoloView.android.kt
composeApp/src/commonMain/kotlin/com/jetbrains/kmpapp/: App.kt  MainScreen.kt  PoseDetectionSolution.kt  PoseDetectionViewModel.kt  Roboto.kt  StartScreen.kt  YoloView.kt
composeApp/src/iosMain/kotlin/com/jetbrains/kmpapp/: CameraView.ios.kt  Fonts.kt  MainViewController.kt  YoloView.ios.kt
gradle/: libs.versions.toml
iosApp/iosApp/: Info.plist
